rust/src/openvasd/tests/snapshots/notus_compose POST __notus__not_a_system.snap
---
source: src/openvasd/tests/test_builder.rs
expression: inner
---
{
  "status_code": 404,
  "headers": {
    "api-version": "1",
    "authentication": "disabled",
    "content-length": "0",
    "date": "[redacted]",
    "feed-version": "unavailable",
  },
  "body": "",
}
